# Sketch3DToolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenCV.cmake
lib/: CMakeLists.txt
lib/freeglut-2.6.0/: CMakeLists.txt
lib/glew-1.13.0/: CMakeLists.txt
lib/glui-2.3/: CMakeLists.txt
lib/glui-2.3/src/: glui_textbox.cpp
lib/glui-2.3/src/example/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
lib/glui-2.3/src/include/GL/: glui.h
lib/glui-2.3/src/tools/: ppm.cpp  ppm.h  ppm2array.cpp
lib/trimesh2-2.12/: CMakeLists.txt
lib/trimesh2-2.12/include/: Vec.h
matlab/: eval_draw_curves.m  eval_rank_lists.m  evaluate_rank_lists.m  install.m  retrieve_model.m  retrieve_sketch.m  sbsr_retrieve_model.m  sbsr_select_model_views.m  select_model_views.m  setupvars.m
matlab/SHREC13/: SHREC13_SBR_Model.cla  SHREC13_SBR_Sketch_Test.cla  SHREC13_SBR_Sketch_Train.cla  read_classification_file.m
matlab/SHREC13/PerformanceData/: Readme.txt
matlab/SHREC13/PerformanceData/Aono (EFSD)/: PR_test.txt  PR_train.txt  Stats_complete.txt  Stats_test.txt
matlab/SHREC13/PerformanceData/Furuya (BF-fDSIFT)/: PR_test.txt  Stats_complete.txt  Stats_test.txt
matlab/SHREC13/PerformanceData/Furuya (BF-fGALIF)/: PR_complete.txt  Stats_complete.txt  Stats_test.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Furuya (BF-fGALIF+BF-fDSIFT)/: PR_complete.txt  PR_test.txt  Stats_test.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Furuya (CDMR-BF-fDSIFT)/: PR_complete.txt  PR_train.txt
matlab/SHREC13/PerformanceData/Furuya (CDMR-BF-fGALIF)/: PR_complete.txt  Stats_complete.txt
matlab/SHREC13/PerformanceData/Furuya (CDMR-BF-fGALIF+CDMR-BF-fDSIFT)/: PR_complete.txt  PR_test.txt  Stats_complete.txt  Stats_test.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Furuya (UMR-BF-fDSIFT)/: Stats_complete.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Furuya (UMR-BF-fGALIF)/: PR_complete.txt  PR_test.txt  Stats_complete.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Furuya (UMR-BF-fGALIF+UMR-BF-fDSIFT)/: Stats_complete.txt
matlab/SHREC13/PerformanceData/Li (SBR-2D-3D_NUM_50)/: PR_test.txt  PR_train.txt  Stats_complete.txt  Stats_test.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Li (SBR-VC_NUM_100)/: PR_complete.txt  PR_test.txt  Stats_complete.txt  Stats_test.txt  Stats_train.txt
matlab/SHREC13/PerformanceData/Li (SBR-VC_NUM_50)/: PR_complete.txt  PR_test.txt  Stats_complete.txt
matlab/SHREC13/PerformanceData/Pascoal (HTD)/: PR_complete.txt  PR_train.txt  Stats_complete.txt  Stats_test.txt
matlab/SHREC13/PerformanceData/Saavedra (FDC)/: PR_test.txt  Stats_test.txt
matlab/SHREC13/PerformanceData/Saavedra (FDC-CVIU version)/: PR_test.txt  Stats_complete.txt  Stats_test.txt
matlab/SHREC14/: SHREC14_SBR_Model.cla  SHREC14_SBR_Sketch.cla  SHREC14_SBR_Sketch_Test.cla  SHREC14_SBR_Sketch_Train.cla
matlab/SHREC2013/: SHREC13_SBR_Sketch.cla  read_classification_file_shrec13.m
matlab/util/: CalAvgPerf.m  InterpolatePerf.m
mex/: CMakeLists.txt  mexEvalRankLists.cpp  mexHashIndexer.cpp  mexSelectMeshViews.cpp  mex_util.h
module/: CMakeLists.txt
module/hashing/: CMakeLists.txt  HashIndexer.cpp  HashIndexer.h  MinHash.cpp  MinHash.h  Platform.h
module/imgproc/: CMakeLists.txt  Descriptor.cpp  Descriptor.h  GridPatch.cpp  GridPatch.h  HOGDescriptor.cpp  HOGDescriptor.h  Patch.cpp  Patch.h  SaliencyDescriptor.cpp  SaliencyDescriptor.h  SlidingPatch.cpp  SlidingPatch.h  edge_util.cc  edge_util.h
module/meshutil/: BaseDrawer.cpp  BaseDrawer.h  BoundaryDrawer.cpp  BoundaryDrawer.h  CMakeLists.txt  Drawer.cpp  Drawer.h  EdgeContourDrawer.cpp  EdgeContourDrawer.h  FPSCounter.cpp  FPSCounter.h  FaceContourDrawer.cpp  FaceContourDrawer.h  GLUT_Window.cpp  GLUT_Window.h  LineDrawer.cpp  LineDrawer.h  Mesh.cpp  Mesh.h  MeshContour.cpp  MeshContour.h  Model.cpp  Model.h  SuggestiveContourDrawer.cpp  SuggestiveContourDrawer.h  mesh_info.cc  mesh_info.h  vertex_info.cc  vertex_info.h
module/retrieval/: BatchMeshWindow.cpp  BatchMeshWindow.h  CMakeLists.txt  MeshWindow.cpp  MeshWindow.h  mesh.cpp  retrieval.h  sketch.cpp
msvc/: project.vcxproj.user.in
msvc/opencv-2.4.12/: OpenCVConfig-version.cmake
src/: CMakeLists.txt  retrieve_sketch_example.cpp  sample_mesh_viewpoints_batch.cpp  view_mesh_example.cpp
(+95 files in other folders)
