macro(add_runnable name)	
	add_executable(${name} ${ARGN})
	target_link_libraries(${name} ${OpenCV_LIBS} meshutil glew freeglut imgproc hashing retrieval)
	configure_file(${MSVC_USER_CONFIG} ${CMAKE_CURRENT_BINARY_DIR}/${name}.vcxproj.user @ONLY)
	set_target_properties(${name} PROPERTIES FOLDER "src")
endmacro()

add_runnable(retrieve_sketch_example retrieve_sketch_example.cpp)
add_runnable(view_mesh_example view_mesh_example.cpp)
add_runnable(sample_mesh_viewpoints_batch sample_mesh_viewpoints_batch.cpp)